--- a/cache_filter.yaml
+++ b/cache_filter.yaml
@@ -20,6 +20,7 @@ static_resources:
                   - name: ring_cache
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.ring_cache.v3.RingCacheFilterConfig
+                      ring_size: 1024
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
